[package]
name = "mashup"
version = "0.1.7" # remember to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Concatenate identifiers in a macro invocation"
repository = "https://github.com/dtolnay/mashup"
readme = "README.md"

[badges]
travis-ci = { repository = "dtolnay/mashup" }

[dependencies]
proc-macro-hack = "0.4.1"
mashup-impl = { version = "0.1.7", path = "impl", default_features = false }

[workspace]
members = ["impl"]

[features]
default = ["std"]
std = [ "mashup-impl/std" ]
